Elements with an ARIA role of treeitem should be able to get their accessible name from their contents.

ARIA Spec 1.1 says that elements with a role of "treeitem" should get their accessible name either "from author" or "from contents". We didn't support "from contents".
BUG=601933
R=dmazzoni@chromium.org, aboxhall@chromium.org
TESTED=browser test

Review-Url: https://codereview.chromium.org/2165463003
Cr-Commit-Position: refs/heads/master@{#406579}

Former-commit-id: e4bce828f9d8b7674497603d2ca02649923abbd4